objects/Abandoned_Checkout__c/Abandoned_Checkout__c.object-meta.xml
<CustomObject>
    <label>Abandoned Checkout</label>
    <nameField>
        <displayFormat>ABCT-{0000}</displayFormat>
        <label>Abandoned Checkout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abandoned Checkouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>