objects/Abandoned_Checkout__c/fields/AbandonedCheckoutUrl__c.field-meta.xml
<CustomField>
    <fullName>AbandonedCheckoutUrl__c</fullName>
    <label>AbandonedCheckoutUrl</label>
    <type>Url</type>
</CustomField>