objects/Abandoned_Checkout__c/fields/customerid__c.field-meta.xml
<CustomField>
    <fullName>customerid__c</fullName>
    <label>Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>