objects/Abandoned_Checkout__c/fields/Discount_Code_Sent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_Sent__c</fullName>
    <label>Discount Code Sent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>