objects/Abandoned_Checkout__c/fields/Discount_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Discount_Sent_At__c</fullName>
    <label>Discount Sent At</label>
    <type>DateTime</type>
</CustomField>