objects/Abandoned_Checkout__c/fields/full_name__c.field-meta.xml
<CustomField>
    <fullName>full_name__c</fullName>
    <label>Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>