objects/Abandoned_Checkout__c/fields/individual_id__c.field-meta.xml
<CustomField>
    <fullName>individual_id__c</fullName>
    <label>individual_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>