objects/Abandoned_Checkout__c/fields/latest_abandonment__c.field-meta.xml
<CustomField>
    <fullName>latest_abandonment__c</fullName>
    <label>Latest Abandonment</label>
    <type>DateTime</type>
</CustomField>