objects/Abandoned_Checkout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>full_name__c</columns>
    <columns>customerid__c</columns>
    <columns>Discount_Code_Sent__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>Discount_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>